fix: navbar z-index increased

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 
 header {
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     max-width: fit-content;
 }
 
@@ -43,7 +43,7 @@ header {
     flex-direction: column;
     height: 100vh;
     margin: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .hero-text {
@@ -62,7 +62,7 @@ header {
     bottom: 20px;      
     margin-right:10px; 
     place-self: end;
-    z-index: 0;
+    z-index: 1;
 
     
     /* visual styling */
